kubernetes/main/apps/security/authelia/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: authelia
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: authelia
  ingress:
    - {}
  egress:
    # allow redis connection
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: authelia-redis
      toPorts:
        - ports:
            - port: "6379"
    # allow lldap connection
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: lldap
      toPorts:
        - ports:
            - port: "389"
